--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My third repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>Nothing else</p>
     <h1>I can push to github</h1>
     <h1>mama i can code now</h1>
+    <h1> iam codding</h1>
+    <p>more paragraph</p>
 </body>
 </html>
