--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p>Nothing else</p>
-    <h1>I can push to github</h1>
+    <h1>I can push to github chnge</h1>
     <h1>mama i can code now</h1>
     <h1> iam codding</h1>
     <p>more paragraph</p>
