--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h1>mama i can code now</h1>
     <h1> iam codding</h1>
     <p>more paragraph</p>
+    <img src="291460478_167490172474043_6259340587398552819_n.jpg" alt="">
 </body>
 </html>
