--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <h1>mama i can code now</h1>
     <h1> iam codding</h1>
     <p>more paragraph</p>
+    <div>
+        <h1>My blog</h1>
+        <p>loe msh jnf pnif nigp npdsbvgo </p>
+    </div>
     <img src="291460478_167490172474043_6259340587398552819_n.jpg" alt="">
     <img src="299315916_579299940428065_1504842501004988721_n.jpg" alt="">
 </body>
